package edu.fiuba.algo3.modelo;

public class TarjetaPais {

    private String nombre;
    private String simbolo;

    public TarjetaPais (String nombre, String simbolo) {

        this.nombre = nombre;
        this.simbolo = simbolo;
    }
}
