@startuml

title "Diagrama de clases general de A.L.T.E.G.O."
class Juego{
{method} 
}

interface TarjetaPais{
{field} 
{method} 
}

class TarjetaPaisActivada{
{field} 
{method} 
}

class TarjetaPaisDesactivada{
{field} 
{method} 
}

class Tablero{
{field} 
{method} 
}

class Jugador{
{field} 
{method} 
}

class Pais{
{field} 
{method} 
}

class Dado{
{field} 
{method} 
}

interface Mision{
{field} 
{method} 
}

class Batalla{
{field} 
{method} 
}

class Continente{
{field} 
{method} 
}

class MisionSecreta{
{field} 
{method} 
}

class MisionNoSecreta{
{field} 
{method} 
}

class Canjes{
{field} 
{method} 
}

Juego "1" *-- "1" Tablero
Juego "1" *-- "2..6" Jugador
Tablero "1" *-- "*" Pais
Jugador "1" --> "0..*" Pais
Jugador "1" --> "*" Batalla
Tablero "1" *-- "6" Continente
Continente "1" *-- "*" Pais
Pais "1" --> "0..3" Dado
Pais "1" --> "1..*" Ficha
Jugador "1" --> "*" Canjes
Jugador "1" --> "*" Mision
Mision <|.. MisionSecreta
Mision <|.. MisionNoSecreta
Juego "1" --> "*" TarjetaPais
TarjetaPais <|.. TarjetaPaisActivada
TarjetaPais <|.. TarjetaPaisDesactivada
Tablero "1" <-- "1" Batalla
Tablero "1  " -> "  2..6" Jugador
Canjes "1" --> "3" TarjetaPais
@enduml